<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/header_iv"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:background="@color/grey"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/images_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/header_iv"/>
        <View
            android:id="@+id/first_delimitation_v"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="10dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/images_rv"/>
        <LinearLayout
            android:id="@+id/details_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/first_delimitation_v">
            <TextView
                android:id="@+id/details_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:text="@string/details"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    android:textSize="14sp"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/details_price_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="7000 $"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/greyLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/type"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/details_type_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/apartment"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/greyLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/beds"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/details_beds_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="3"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/greyLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/bathrooms"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/details_bathroom_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/greyLight"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/surface"
                    android:textSize="14sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:id="@+id/details_surface_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="140m2"
                    android:textSize="14sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"/>
            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@color/greyLight"/>
        </LinearLayout>
        <View
            android:id="@+id/second_delimitation_v"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginTop="20dp"
            android:background="@color/greyLight"
            app:layout_constraintTop_toBottomOf="@id/details_ll"/>
        <LinearLayout
            android:id="@+id/location_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/second_delimitation_v">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_location"/>
            <TextView
                android:id="@+id/details_address_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="21, jump street, 06000 Nice"
                android:textColor="@color/black"
                android:textSize="14sp"/>
        </LinearLayout>
        <androidx.fragment.app.FragmentContainerView
            xmlns:map="http://schemas.android.com/apk/res-auto"
            android:id="@+id/property_location_fcg"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginTop="15dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/location_ll"
            map:cameraTargetLat="48.858328"
            map:cameraTargetLng="2.341562"
            map:cameraZoom="11" />
        <View
            android:id="@+id/third_delimitation_v"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:background="@color/greyLight"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/property_location_fcg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="30dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@id/third_delimitation_v">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/realEstateAgent"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="15sp"
                android:textStyle="bold"
                />
            <TextView
                android:id="@+id/real_estate_agent_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Amelin Lucas"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-medium"
                android:textAlignment="center"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/date_of_update_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/lastUpdate"
                android:textColor="@color/black"
                android:textAlignment="center"
                android:textSize="12sp"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
